# icp-virtual-nexus

./: README.md  index.html
backend/: Cargo.toml  README.md  dfx.json
backend/src/avatar/: Cargo.toml  avatar.did
backend/src/avatar/src/: lib.rs
backend/src/tickets/: Cargo.toml  tickets.did
backend/src/tickets/src/: lib.rs
src/: index.css
src/components/: Dashboard.tsx  Features.tsx  Hero.tsx  LoginCard.tsx  VRScene.tsx
src/pages/: Index.tsx
