
[workspace]
members = [
    "src/avatar",
    "src/tickets", 
    "src/vr_session"
]

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
debug = false
panic = 'abort'
